# MLOpsManufacturing

./: .amlignore  .env.example  .gitignore  .markdownlint.yaml  LICENSE  README.md
.devcontainer/: README.md  devcontainer.json
.devcontainer/image/: Dockerfile
.github/workflows/: databricks-cicd.yml  (+1 more)
.pipelines/: 01-pull-request.yml  02-processing-data.yml  03-train-evaluate-register-model.yml  04-deploy-model-aci.yml  05-create-scoring-docker-image.yml  06-validate-custom-amlstep-dockerfile.yml  07-processing-data-os-cmd.yml  code-quality-template.yml  package-model-template.yml  publish-model-artifact-template.yml  trigger-preprocessing-pipeline.yml  update-ci-dependencies.yml  variables-template.yml
common/: README.md
common/azureml_appinsights_logger/: README.md  azure-pipelines.yml  cd-pipeline.yml  ci-pipeline.yml  conda_dependency.yml  setup.cfg
common/azureml_appinsights_logger/azureml_appinsights_logger/: appinsights_logger.py  azureml_logger.py  console_logger.py  env_variables.py  logger_interface.py  observability.py
common/azureml_appinsights_logger/sample/: conda_dependency.yml  main.py  train.py
common/azureml_appinsights_logger/tests/: test_appinsights_logger.py  test_azureml_logger.py  test_console_logger.py  test_observability.py
docs/: README.md  azureml-security.md  local-development.md  variable-management.md
environment_setup/: Dockerfile  docker-image-pipeline.yml  iac-create-environment-pipeline-arm.yml
ml_model/: ci_dependencies.yml  conda_dependencies.yml  dev_dependencies.yml  parameters.json
samples/: README.md
(+533 files in other folders)
