[metadata]
name = azureml_appinsights_logger-MLOpsManufacturing
version = 0.0.1
author = MLOpsManufacturing VTeam
author_email = pliu@microsoft.co
description = A package that unifies logging to Azure ML, App Insights, and Console for machine learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/liupeirong/MLOpsManufacturing
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6